cmake_minimum_required(VERSION 2.8)
project(PhoneBook)
set(MAIN_PROJECT_SRC_LIST PhoneBook)
set(SOURCE_LIB l_01_t_03.cpp) 
add_definitions(-Wall -O3)
set(CMAKE_CXX_FLAGS -std=c++17)
set(SRC_LIST l_01_t_03.cpp)
add_executable(../PhoneBook ./lib/l_01_t_03.cpp)
add_subdirectory(./lib)
target_link_libraries(../PhoneBook lib)
