cmake_minimum_required(VERSION 2.8)
project(CountVowels)
set(MAIN_PROJECT_SRC_LIST CountVowels)
set(SOURCE_LIB l_02_t_03.cpp) 
add_definitions(-Wall -O3)
set(CMAKE_CXX_FLAGS -std=c++17)
set(SRC_LIST l_02_t_03.cpp)
add_executable(../CountVowels ./lib/l_02_t_03.cpp)
add_subdirectory(./lib)
target_link_libraries(../CountVowels lib)
