cmake_minimum_required(VERSION 2.8)
project(Matrix)
set(MAIN_PROJECT_SRC_LIST Matrix)
set(SOURCE_LIB l_03_t_02.cpp) 
add_definitions(-Wall -O3)
set(CMAKE_CXX_FLAGS -std=c++17)
set(SRC_LIST l_03_t_02.cpp)
add_executable(../Matrix ./lib/l_03_t_02.cpp)
add_subdirectory(./lib)
target_link_libraries(../Matrix lib)
